<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/comment_or_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/comment"
        android:textColor="@color/textColorGrey"/>
    <android.support.v7.widget.CardView
        android:id="@+id/card_feed"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp">

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/comment_hint"
            android:padding="10dp"
            android:textColor="@color/textColorDarkGrey"
            android:textColorHint="@color/textColorGrey" />

        </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorGrey"
            android:text="@string/sure"/>
        <Button
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>