<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:contentPadding="8dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="@dimen/avatar_small"
                        android:layout_height="@dimen/avatar_small"
                        app:srcCompat="@drawable/ic_face" />

                    <TextView
                        android:id="@+id/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textColor="@color/textColorGrey" />
                </LinearLayout>

                <TextView
                    android:id="@+id/create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorGrey" />
            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:autoLink="web|phone|email"
                android:textColor="@color/textColorGrey" />

            <RelativeLayout
                android:id="@+id/feed_pic_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_feed"
                android:paddingBottom="10dp"
                android:visibility="gone">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/feed_pic"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_feed"
                    android:layout_gravity="center">
                </android.support.v7.widget.RecyclerView>
                <TextView
                    android:id="@+id/image_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/feed_pic"
                    android:background="#77000000"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:text="@string/image_count"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left">
                    <ImageButton
                        android:id="@+id/imageButtonLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/like_comment_bg"
                        app:srcCompat="@drawable/ic_thumb_up" />

                    <TextView
                        android:id="@+id/like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/default_like_count"
                        android:textColor="@color/textColorGrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left">

                    <ImageButton
                        android:id="@+id/imageButtonComment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/like_comment_bg"
                        app:srcCompat="@drawable/ic_comment" />

                    <TextView
                        android:id="@+id/comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/default_comment_count"
                        android:textColor="@color/textColorGrey" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
